--- a/.github/workflows/fastscan.yaml
+++ b/.github/workflows/fastscan.yaml
@@ -22,4 +22,4 @@ jobs:
         run: docker pull searaph/gitlab-fastscan
 
       - name: Run docker container
-        run: docker run -v $(pwd):/fastScan/sourceCode searaph/gitlab-fastscan /fastScan/sourceCode -n ${{github.repository}}
+        run: docker run -v $(pwd):/fastScan/sourceCode searaph/gitlab-fastscan /fastScan/sourceCode -n ${{github.repository}} | cut -d'/' -f 2
