--- a/.github/workflows/fastscan.yaml
+++ b/.github/workflows/fastscan.yaml
@@ -25,7 +25,6 @@ jobs:
         run: |
          cd ${{ github.workspace }}
           git_folder=$(basename "$(git rev-parse --show-toplevel)")
-          
+          docker run -v $(pwd):/fastScan/sourceCode searaph/gitlab-fastscan /fastScan/sourceCode -n $git_folder
 
-      - name: Run docker container
-        run: docker run -v $(pwd):/fastScan/sourceCode searaph/gitlab-fastscan /fastScan/sourceCode -n $git_folder
+          
